--- a/index.html
+++ b/index.html
@@ -3,43 +3,53 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Private Messenger</title>
+<title>Insta Messenger</title>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
 <style>
-  body { background: #1f2937; color: #f9fafb; font-family: 'Poppins', sans-serif; }
-  #chat { display: flex; flex-direction: column; height: 70vh; overflow-y: auto; padding: 0.5rem; }
-  .msg { padding: 10px 16px; border-radius: 20px; margin: 4px 0; max-width: 70%; word-wrap: break-word; }
-  .self { background: linear-gradient(135deg,#3b82f6,#60a5fa); color: white; align-self: flex-end; }
-  .other { background: linear-gradient(135deg,#374151,#4b5563); color: white; align-self: flex-start; }
-  ::-webkit-scrollbar { width: 6px; }
-  ::-webkit-scrollbar-thumb { background: #4b5563; border-radius: 3px; }
+  body { background: #fafafa; font-family: 'Poppins', sans-serif; margin:0; }
+  #chatContainer { display: flex; flex-direction: column; max-width: 420px; width: 100%; height: 90vh; background:#fff; border:1px solid #ddd; border-radius:10px; overflow:hidden; }
+  #chat { flex:1; padding:1rem; overflow-y:auto; display:flex; flex-direction:column; gap:0.5rem; background:#f0f0f0; }
+  .msg { padding:10px 14px; border-radius:20px; max-width:70%; position:relative; word-wrap: break-word; font-size: 14px; }
+  .self { background: #0095f6; color:#fff; align-self:flex-end; border-bottom-right-radius:4px; }
+  .other { background:#e4e6eb; color:#000; align-self:flex-start; border-bottom-left-radius:4px; }
+  .delete-btn { position:absolute; top:-6px; right:-6px; background:rgba(0,0,0,0.5); color:#fff; border-radius:50%; width:18px; height:18px; font-size:12px; text-align:center; line-height:18px; cursor:pointer; display:none; }
+  .msg:hover .delete-btn { display:block; }
+  #messageInput { padding:10px; border-radius:20px; border:1px solid #ddd; flex:1; outline:none; }
+  #sendBtn { padding:10px 16px; border-radius:20px; background:#0095f6; color:#fff; border:none; font-weight:bold; }
+  .login-section { max-width:420px; margin:2rem auto; background:#fff; padding:2rem; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1); display:flex; flex-direction:column; gap:1rem; }
+  .login-section input { padding:12px; border-radius:8px; border:1px solid #ddd; outline:none; }
+  .login-section button { padding:12px; border:none; border-radius:8px; background:#0095f6; color:#fff; font-weight:bold; cursor:pointer; }
+  .header { display:flex; justify-content:space-between; align-items:center; padding:0.5rem 1rem; border-bottom:1px solid #ddd; background:#fff; }
 </style>
 </head>
-<body class="flex flex-col items-center p-4 min-h-screen">
+<body>
 
 <!-- Login Section -->
-<div id="login" class="flex flex-col items-center gap-3 w-full max-w-md bg-gray-800 p-6 rounded-lg shadow-lg">
-  <h1 class="text-3xl font-bold text-center mb-2">Private Messenger</h1>
-  <input id="roomId" placeholder="Room ID" class="p-3 rounded w-full text-black focus:outline-none focus:ring-2 focus:ring-blue-400">
-  <input id="roomPassword" type="password" placeholder="Room Password" class="p-3 rounded w-full text-black focus:outline-none focus:ring-2 focus:ring-blue-400">
-  <input id="displayName" placeholder="Your Name" class="p-3 rounded w-full text-black focus:outline-none focus:ring-2 focus:ring-blue-400">
-  <button onclick="createOrJoinRoom()" class="bg-blue-500 hover:bg-blue-600 p-3 rounded w-full mt-2 font-semibold transition duration-200">Join / Create Room</button>
+<div id="login" class="login-section">
+  <h2 class="text-xl font-bold text-center">Private Messenger</h2>
+  <input id="displayName" placeholder="Your Name">
+  <input id="roomId" placeholder="Room ID">
+  <input id="roomPassword" type="password" placeholder="Room Password">
+  <button onclick="createOrJoinRoom()">Join / Create Room</button>
 </div>
 
 <!-- Chat Section -->
-<div id="chatContainer" class="hidden flex-col w-full max-w-md mt-4">
-  <div id="chat" class="flex flex-col bg-gray-900 rounded-lg h-96 overflow-y-auto shadow-inner p-3 mb-2"></div>
-  <div class="flex gap-2">
-    <input id="messageInput" placeholder="Type a message..." class="p-3 rounded flex-1 text-black focus:outline-none focus:ring-2 focus:ring-green-400">
-    <button onclick="sendMessage()" class="bg-green-500 hover:bg-green-600 p-3 rounded font-semibold transition duration-200">Send</button>
+<div id="chatContainer" class="hidden flex-col">
+  <div class="header">
+    <span id="roomTitle">Room</span>
+    <button onclick="deleteChat()" class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded text-sm">Delete Chat</button>
+  </div>
+  <div id="chat"></div>
+  <div class="flex gap-2 p-2 bg-white border-t border-gray-300">
+    <input id="messageInput" placeholder="Message...">
+    <button id="sendBtn" onclick="sendMessage()">Send</button>
   </div>
 </div>
 
 <script>
-  // ---- Replace this with your Firebase config ----
 const firebaseConfig = {
   apiKey: "AIzaSyDTiNWOblxAVIVUVf74sCRldO8KXEw2vK4",
   authDomain: "deadpoolchat-0987.firebaseapp.com",
@@ -49,68 +59,81 @@ const firebaseConfig = {
   messagingSenderId: "41962732901",
   appId: "1:41962732901:web:be2aea444ef1f21a6d758c"
 };
+firebase.initializeApp(firebaseConfig);
+const db = firebase.database();
+const auth = firebase.auth();
 
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.database();
-  const auth = firebase.auth();
-  let roomId, displayName, passwordHash, uid;
-  roomId = "spiderman";
-  haspassword = "mine0987";
+let roomId, displayName, passwordHash, uid;
+auth.signInAnonymously();
 
-  auth.signInAnonymously();
+async function hashPassword(password) {
+  const enc = new TextEncoder();
+  const hashBuffer = await crypto.subtle.digest('SHA-256', enc.encode(password));
+  return Array.from(new Uint8Array(hashBuffer)).map(b => b.toString(16).padStart(2,'0')).join('');
+}
 
-  async function hashPassword(password) {
-    const enc = new TextEncoder();
-    const hashBuffer = await crypto.subtle.digest('SHA-256', enc.encode(password));
-    const hashArray = Array.from(new Uint8Array(hashBuffer));
-    return hashArray.map(b => b.toString(16).padStart(2,'0')).join('');
+async function createOrJoinRoom() {
+  roomId = document.getElementById('roomId').value.trim();
+  displayName = document.getElementById('displayName').value.trim();
+  const password = document.getElementById('roomPassword').value;
+  if(!roomId || !displayName || !password) return alert("All fields required");
+  passwordHash = await hashPassword(password);
+
+  const metaRef = db.ref(`rooms/${roomId}/meta`);
+  metaRef.get().then(snapshot => {
+    if(snapshot.exists()){
+      if(snapshot.val().passwordHash !== passwordHash) return alert("Wrong password");
+      const users = snapshot.val().connectedUsers || [];
+      if(!users.includes(displayName) && users.length>=2) return alert("Room full for 2 users");
+      if(!users.includes(displayName)) users.push(displayName);
+      metaRef.update({connectedUsers: users});
+    } else {
+      metaRef.set({passwordHash, created: Date.now(), connectedUsers:[displayName]});
+    }
+    document.getElementById('login').classList.add('hidden');
+    document.getElementById('chatContainer').classList.remove('hidden');
+    document.getElementById('roomTitle').textContent = roomId;
+    startChat();
+  });
+}
+
+let chatRef = null;
+function startChat(){
+  if(chatRef) chatRef.off();
+  chatRef = db.ref(`rooms/${roomId}/messages`);
+  chatRef.on('child_added', snapshot=>{
+    const data = snapshot.val();
+    const div = document.createElement('div');
+    div.className = 'msg ' + (data.uid===uid?'self':'other');
+    div.textContent = `${data.name}: ${data.text}`;
+
+    const delBtn = document.createElement('span');
+    delBtn.textContent = '×';
+    delBtn.className = 'delete-btn';
+    delBtn.onclick = ()=>chatRef.child(snapshot.key).remove();
+    div.appendChild(delBtn);
+
+    document.getElementById('chat').appendChild(div);
+    document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
+  });
+}
+
+function sendMessage(){
+  const text = document.getElementById('messageInput').value.trim();
+  if(!text) return;
+  const chatRefLocal = db.ref(`rooms/${roomId}/messages`);
+  uid = uid || auth.currentUser.uid;
+  chatRefLocal.push({name:displayName,text,uid,ts:Date.now()});
+  document.getElementById('messageInput').value='';
+}
+
+function deleteChat(){
+  if(confirm("Delete entire chat?")){
+    db.ref(`rooms/${roomId}/messages`).remove();
+    document.getElementById('chat').innerHTML='';
   }
-
-  async function createOrJoinRoom() {
-    roomId = document.getElementById('roomId').value.trim();
-    displayName = document.getElementById('displayName').value.trim();
-    const password = document.getElementById('roomPassword').value;
-    if(!roomId || !displayName || !password) return alert("All fields required");
-    passwordHash = await hashPassword(password);
-
-    const metaRef = db.ref(`rooms/${roomId}/meta`);
-    metaRef.get().then(snapshot => {
-      if(snapshot.exists()) {
-        if(snapshot.val().passwordHash !== passwordHash) return alert("Wrong password");
-        // Optional: check if room has 2 users limit
-        const connectedUsers = snapshot.val().connectedUsers || [];
-        if(!connectedUsers.includes(displayName) && connectedUsers.length >= 2) return alert("Room full for 2 users");
-        if(!connectedUsers.includes(displayName)) connectedUsers.push(displayName);
-        metaRef.update({connectedUsers});
-      } else {
-        metaRef.set({ passwordHash, created: Date.now(), connectedUsers: [displayName] });
-      }
-      document.getElementById('login').classList.add('hidden');
-      document.getElementById('chatContainer').classList.remove('hidden');
-      startChat();
-    });
-  }
-
-  function startChat() {
-    const chatRef = db.ref(`rooms/${roomId}/messages`);
-    chatRef.on('child_added', snapshot => {
-      const data = snapshot.val();
-      const div = document.createElement('div');
-      div.className = 'msg ' + (data.uid === uid ? 'self' : 'other');
-      div.textContent = `${data.name}: ${data.text}`;
-      document.getElementById('chat').appendChild(div);
-      document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
-    });
-  }
-
-  function sendMessage() {
-    const text = document.getElementById('messageInput').value.trim();
-    if(!text) return;
-    const chatRef = db.ref(`rooms/${roomId}/messages`);
-    uid = uid || auth.currentUser.uid;
-    chatRef.push({ name: displayName, text, uid, ts: Date.now() });
-    document.getElementById('messageInput').value = '';
-  }
+}
 </script>
 </body>
 </html>
+
