--- a/index.html
+++ b/index.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Insta Messenger</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Private 2-Person Chat</title>
+
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
 <link href="https://cdn.jsdelivr.net/npm/tailwindcss@3.3.2/dist/tailwind.min.css" rel="stylesheet">
+
 <style>
-  body { background: #fafafa; font-family: 'Poppins', sans-serif; margin:0; }
-  #chatContainer { display: flex; flex-direction: column; max-width: 420px; width: 100%; height: 90vh; background:#fff; border:1px solid #ddd; border-radius:10px; overflow:hidden; }
-  #chat { flex:1; padding:1rem; overflow-y:auto; display:flex; flex-direction:column; gap:0.5rem; background:#f0f0f0; }
-  .msg { padding:10px 14px; border-radius:20px; max-width:70%; position:relative; word-wrap: break-word; font-size: 14px; }
-  .self { background: #0095f6; color:#fff; align-self:flex-end; border-bottom-right-radius:4px; }
-  .other { background:#e4e6eb; color:#000; align-self:flex-start; border-bottom-left-radius:4px; }
-  .delete-btn { position:absolute; top:-6px; right:-6px; background:rgba(0,0,0,0.5); color:#fff; border-radius:50%; width:18px; height:18px; font-size:12px; text-align:center; line-height:18px; cursor:pointer; display:none; }
-  .msg:hover .delete-btn { display:block; }
-  #messageInput { padding:10px; border-radius:20px; border:1px solid #ddd; flex:1; outline:none; }
-  #sendBtn { padding:10px 16px; border-radius:20px; background:#0095f6; color:#fff; border:none; font-weight:bold; }
-  .login-section { max-width:420px; margin:2rem auto; background:#fff; padding:2rem; border-radius:10px; box-shadow:0 4px 12px rgba(0,0,0,0.1); display:flex; flex-direction:column; gap:1rem; }
-  .login-section input { padding:12px; border-radius:8px; border:1px solid #ddd; outline:none; }
-  .login-section button { padding:12px; border:none; border-radius:8px; background:#0095f6; color:#fff; font-weight:bold; cursor:pointer; }
-  .header { display:flex; justify-content:space-between; align-items:center; padding:0.5rem 1rem; border-bottom:1px solid #ddd; background:#fff; }
+html, body { margin:0; padding:0; font-family:'Poppins',sans-serif; height:100%; background:linear-gradient(180deg,#f3f4f6,#e6eefb); }
+#loginScreen, #chatScreen { width:100%; height:100%; display:flex; justify-content:center; align-items:center; transition: opacity 0.3s ease; }
+#loginScreen { background:linear-gradient(180deg,#f0f4f8,#dbe7f8); flex-direction:column; }
+.login-card { background:white; padding:2rem; border-radius:14px; box-shadow:0 12px 30px rgba(0,0,0,0.1); width:90%; max-width:380px; display:flex; flex-direction:column; gap:1rem; }
+.login-card input { padding:12px; border-radius:10px; border:1px solid #e2e8f0; outline:none; font-size:1rem; }
+.login-card button { padding:12px; border-radius:10px; border:none; background:linear-gradient(90deg,#0095f6,#00c6ff); color:white; font-weight:600; cursor:pointer; }
+.login-card .title { font-weight:700; font-size:1.2rem; color:#0095f6; text-align:center; }
+
+#chatScreen { display:none; flex-direction:column; height:100%; max-height:100vh; }
+.chat-container { display:flex; flex-direction:column; width:100%; max-width:420px; height:100%; background:white; border-radius:14px; box-shadow:0 12px 30px rgba(0,0,0,0.1); overflow:hidden; margin:1rem auto; }
+.header { padding:0.9rem 1rem; display:flex; justify-content:space-between; align-items:center; background:linear-gradient(90deg,#0095f6,#00c6ff); color:white; }
+.header .title { font-weight:700; }
+.header .sub { font-size:0.85rem; opacity:0.9; }
+
+#chat { flex:1; padding:1rem; overflow-y:auto; display:flex; flex-direction:column; gap:0.6rem; background:url('https://images.unsplash.com/photo-1503264116251-35a269479413?auto=format&fit=crop&w=1400&q=80') center/cover no-repeat fixed; }
+.msg { display:flex; gap:8px; padding:10px 14px; border-radius:18px; max-width:72%; font-size:14px; align-items:flex-end; box-shadow:0 2px 6px rgba(2,6,23,0.06); position:relative; }
+.self { align-self:flex-end; background:linear-gradient(180deg,#0087e8,#006fbf); color:white; flex-direction:row-reverse; }
+.other { align-self:flex-start; background:#eef2f7; color:#0b1220; }
+.msg-text { display:flex; flex-direction:column; }
+.avatar { width:28px; height:28px; border-radius:50%; flex-shrink:0; }
+.meta { font-size:11px; opacity:0.75; margin-top:4px; text-align:right; }
+.delete-btn { position:absolute; top:-8px; right:-8px; background:rgba(0,0,0,0.55); color:white; width:20px; height:20px; border-radius:50%; display:none; align-items:center; justify-content:center; cursor:pointer; font-weight:700; }
+.msg.self:hover .delete-btn { display:flex; }
+
+.composer { display:flex; gap:0.6rem; padding:0.9rem; border-top:1px solid #e2e8f0; background:white; align-items:center; }
+#messageInput { flex:1; padding:10px 14px; border-radius:999px; border:1px solid #e2e8f0; outline:none; }
+#sendBtn { padding:8px 14px; border-radius:999px; background:linear-gradient(90deg,#0095f6,#00c6ff); color:white; border:none; font-weight:700; cursor:pointer; }
+
+.typing-indicator { font-size:12px; color:#374151; opacity:0.8; padding-left:6px; }
+@media (max-width:460px){.chat-container{width:95%;}.login-card{width:95%;}}
 </style>
 </head>
 <body>
 
-<!-- Login Section -->
-<div id="login" class="login-section">
-  <h2 class="text-xl font-bold text-center">Private Messenger</h2>
-  <input id="displayName" placeholder="Your Name">
-  <input id="roomId" placeholder="Room ID">
-  <input id="roomPassword" type="password" placeholder="Room Password">
-  <button onclick="createOrJoinRoom()">Join / Create Room</button>
+<div id="loginScreen">
+  <div class="login-card">
+    <div class="title">Messenger</div>
+    <input id="displayName" placeholder="Username (ibrahim/piddy)" />
+    <input id="roomPassword" type="password" placeholder="Password" />
+    <button onclick="joinRoom()">Enter Chat</button>
+  </div>
 </div>
 
-<!-- Chat Section -->
-<div id="chatContainer" class="hidden flex-col">
-  <div class="header">
-    <span id="roomTitle">Room</span>
-    <button onclick="deleteChat()" class="bg-red-500 hover:bg-red-600 text-white px-3 py-1 rounded text-sm">Delete Chat</button>
-  </div>
-  <div id="chat"></div>
-  <div class="flex gap-2 p-2 bg-white border-t border-gray-300">
-    <input id="messageInput" placeholder="Message...">
-    <button id="sendBtn" onclick="sendMessage()">Send</button>
+<div id="chatScreen">
+  <div class="chat-container">
+    <div class="header">
+      <div>
+        <div class="title" id="roomTitle">Private Room</div>
+        <div class="sub" id="userInfo">Connecting...</div>
+      </div>
+      <button onclick="leaveRoom()" style="background:rgba(255,255,255,0.15); border:none; color:white; font-weight:700; padding:3px 8px; border-radius:6px;">Leave</button>
+    </div>
+    <div id="chat"></div>
+    <div class="typing-indicator" id="typingIndicator"></div>
+    <div class="composer">
+      <input id="messageInput" placeholder="Message..." />
+      <button id="sendBtn" onclick="sendMessage()">Send</button>
+    </div>
   </div>
 </div>
 
@@ -60,80 +83,109 @@ const firebaseConfig = {
   appId: "1:41962732901:web:be2aea444ef1f21a6d758c"
 };
 firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
-const auth = firebase.auth();
+const db=firebase.database(), auth=firebase.auth();
+const allowedUsers={"ibrahim":"a130f9b2a5c6ca74540332a92eae9b1df0f5f3e2403103b9cd8d5daedf784189","piddy":"a130f9b2a5c6ca74540332a92eae9b1df0f5f3e2403103b9cd8d5daedf784189"};
+const roomId="ibrahim_piddy_room";
+const avatars={"ibrahim":"https://i.pravatar.cc/40?u=ibrahim","piddy":"https://i.pravatar.cc/40?u=piddy"};
 
-let roomId, displayName, passwordHash, uid;
-auth.signInAnonymously();
+let displayName="", passwordHash="", uid=null, chatRef=null, typingTimeout=null;
+auth.signInAnonymously().catch(console.error);
+auth.onAuthStateChanged(u=>{if(u) uid=u.uid;});
 
-async function hashPassword(password) {
-  const enc = new TextEncoder();
-  const hashBuffer = await crypto.subtle.digest('SHA-256', enc.encode(password));
-  return Array.from(new Uint8Array(hashBuffer)).map(b => b.toString(16).padStart(2,'0')).join('');
-}
+async function hashPassword(p){const enc=new TextEncoder();const buf=await crypto.subtle.digest('SHA-256',enc.encode(p));return Array.from(new Uint8Array(buf)).map(b=>b.toString(16).padStart(2,'0')).join('');}
 
-async function createOrJoinRoom() {
-  roomId = document.getElementById('roomId').value.trim();
-  displayName = document.getElementById('displayName').value.trim();
-  const password = document.getElementById('roomPassword').value;
-  if(!roomId || !displayName || !password) return alert("All fields required");
-  passwordHash = await hashPassword(password);
+async function joinRoom(){
+  displayName=document.getElementById('displayName').value.trim();
+  const password=document.getElementById('roomPassword').value;
+  if(!displayName||!password)return alert("Enter both fields");
+  if(!allowedUsers[displayName])return alert("Invalid username");
+  passwordHash=await hashPassword(password);
+  if(passwordHash!==allowedUsers[displayName])return alert("Wrong password");
 
-  const metaRef = db.ref(`rooms/${roomId}/meta`);
-  metaRef.get().then(snapshot => {
-    if(snapshot.exists()){
-      if(snapshot.val().passwordHash !== passwordHash) return alert("Wrong password");
-      const users = snapshot.val().connectedUsers || [];
-      if(!users.includes(displayName) && users.length>=2) return alert("Room full for 2 users");
-      if(!users.includes(displayName)) users.push(displayName);
-      metaRef.update({connectedUsers: users});
-    } else {
-      metaRef.set({passwordHash, created: Date.now(), connectedUsers:[displayName]});
+  const metaRef=db.ref(`rooms/${roomId}/meta`);
+  metaRef.get().then(snap=>{
+    let users=snap.exists()?snap.val().connectedUsers||[]:[];
+    if(!users.includes(displayName)){
+      if(users.length>=2)return alert("Room full");
+      users.push(displayName);
     }
-    document.getElementById('login').classList.add('hidden');
-    document.getElementById('chatContainer').classList.remove('hidden');
-    document.getElementById('roomTitle').textContent = roomId;
-    startChat();
+    metaRef.set({passwordHash,created:snap.exists()?snap.val().created:Date.now(),connectedUsers:users}).then(()=>{
+      document.getElementById('loginScreen').style.display="none";
+      document.getElementById('chatScreen').style.display="flex";
+      document.getElementById('userInfo').textContent=displayName+" • connected: "+users.join(", ");
+      startChat();
+    });
   });
 }
 
-let chatRef = null;
 function startChat(){
   if(chatRef) chatRef.off();
-  chatRef = db.ref(`rooms/${roomId}/messages`);
-  chatRef.on('child_added', snapshot=>{
-    const data = snapshot.val();
-    const div = document.createElement('div');
-    div.className = 'msg ' + (data.uid===uid?'self':'other');
-    div.textContent = `${data.name}: ${data.text}`;
+  chatRef=db.ref(`rooms/${roomId}/messages`);
+  chatRef.on('child_added',snap=>{appendMessage(snap.key,snap.val());document.getElementById('chat').scrollTop=document.getElementById('chat').scrollHeight;});
+  chatRef.on('child_removed',snap=>{const el=document.getElementById('msg_'+snap.key);if(el) el.remove();});
 
-    const delBtn = document.createElement('span');
-    delBtn.textContent = '×';
-    delBtn.className = 'delete-btn';
-    delBtn.onclick = ()=>chatRef.child(snapshot.key).remove();
-    div.appendChild(delBtn);
-
-    document.getElementById('chat').appendChild(div);
-    document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
+  const typingRef=db.ref(`rooms/${roomId}/typing`);
+  document.getElementById('messageInput').addEventListener('input',()=>{
+    typingRef.child(displayName).set(true);
+    clearTimeout(typingTimeout);
+    typingTimeout=setTimeout(()=>typingRef.child(displayName).set(false),1200);
   });
+  typingRef.on('value',snap=>{
+    const t=snap.val()||{};
+    const others=Object.keys(t).filter(u=>u!==displayName && t[u]);
+    document.getElementById('typingIndicator').textContent=others.length>0?others.join(", ")+" is typing...":"";
+  });
+}
+
+function appendMessage(key,data){
+  if(document.getElementById('msg_'+key))return;
+  const chat=document.getElementById('chat');
+  const div=document.createElement('div'); div.id='msg_'+key; div.className='msg '+((data.name===displayName)?'self':'other');
+
+  const avatar=document.createElement('img'); avatar.src=avatars[data.name]||'https://i.pravatar.cc/40'; avatar.className='avatar'; div.appendChild(avatar);
+  const textWrapper=document.createElement('div'); textWrapper.className='msg-text';
+  const txt=document.createElement('div'); txt.textContent=data.name+": "+data.text; textWrapper.appendChild(txt);
+  const meta=document.createElement('span'); meta.className='meta'; meta.textContent=new Date(data.ts||Date.now()).toLocaleTimeString(); textWrapper.appendChild(meta);
+  div.appendChild(textWrapper);
+
+  if(data.name===displayName){
+    const delBtn=document.createElement('div'); delBtn.className='delete-btn'; delBtn.textContent='×'; delBtn.title="Delete your message";
+    delBtn.onclick=()=>{if(confirm("Delete this message?")) db.ref(`rooms/${roomId}/messages/${key}`).remove();};
+    div.appendChild(delBtn);
+  }
+  chat.appendChild(div);
 }
 
 function sendMessage(){
-  const text = document.getElementById('messageInput').value.trim();
-  if(!text) return;
-  const chatRefLocal = db.ref(`rooms/${roomId}/messages`);
-  uid = uid || auth.currentUser.uid;
-  chatRefLocal.push({name:displayName,text,uid,ts:Date.now()});
-  document.getElementById('messageInput').value='';
+  const text=document.getElementById('messageInput').value.trim();
+  if(!text)return;
+  uid=uid||('anon_'+Math.random().toString(36).slice(2,8));
+  db.ref(`rooms/${roomId}/messages`).push({name:displayName,text,uid,ts:Date.now()}).then(()=>document.getElementById('messageInput').value='');
 }
 
-function deleteChat(){
-  if(confirm("Delete entire chat?")){
-    db.ref(`rooms/${roomId}/messages`).remove();
-    document.getElementById('chat').innerHTML='';
-  }
+function leaveRoom(){
+  const metaRef=db.ref(`rooms/${roomId}/meta`);
+  metaRef.get().then(snap=>{
+    if(!snap.exists()){resetLogin(); return;}
+    const users=(snap.val().connectedUsers||[]).filter(u=>u!==displayName);
+    if(users.length===0) metaRef.remove(); else metaRef.update({connectedUsers:users});
+    resetLogin();
+  });
 }
+
+function resetLogin(){
+  if(chatRef){ chatRef.off(); chatRef=null; }
+  document.getElementById('chat').innerHTML='';
+  document.getElementById('chatScreen').style.display='none';
+  document.getElementById('loginScreen').style.display='flex';
+  document.getElementById('displayName').value=''; document.getElementById('roomPassword').value=''; displayName=""; passwordHash="";
+  document.getElementById('userInfo').textContent='Disconnected';
+}
+
+document.getElementById('messageInput').addEventListener('keydown',e=>{if(e.key==='Enter')sendMessage();});
+document.getElementById('roomPassword').addEventListener('keydown',e=>{if(e.key==='Enter')joinRoom();});
+document.getElementById('displayName').addEventListener('keydown',e=>{if(e.key==='Enter')joinRoom();});
 </script>
+
 </body>
 </html>
-
